eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-cluster-inventa-dev
  labels:
    app: eks-cluster-inventa-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-cluster-inventa-dev
  template:
    metadata:
      labels:
        app: eks-cluster-inventa-dev
    spec:
      containers:
      - name: eks-cluster-inventa-dev
        image: 960382207733.dkr.ecr.us-east-1.amazonaws.com/ecr-inventa-dev:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
