eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluste-eks-test-ph-api-service
spec:
  selector:
    app: cluste-eks-test-ph-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
